Bring back the links at the footer

--- a/docs/api-reference/api-reference.mdx
+++ b/docs/api-reference/api-reference.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 10
 ---
 
-<!-- import ApiDocMdx from "@theme/ApiDocMdx"; -->
+import ApiDocMdx from "@theme/ApiDocMdx";
 
 # API Reference 🧪
 
@@ -10,4 +10,4 @@ This page includes all of the API endpoints available in Port.
 
 Here you can learn how to interact with different Port components: blueprints, entities, relations, actions and more
 
-<!-- <ApiDocMdx id="port-api" /> -->
+<ApiDocMdx id="port-api" />
