--- a/docs/build-your-software-catalog/build-your-software-catalog.mdx
+++ b/docs/build-your-software-catalog/build-your-software-catalog.mdx
@@ -2,24 +2,27 @@
 sidebar_position: 1
 ---
 
-# Build your Software Catalog 🏗️
+import Image from "@theme/IdealImage";
+import Integrations from "../../static/img/software-catalog/integrations.png";
+
+# 🏗️ Build your Software Catalog
 
 Port's software catalog is a central metadata store for software, environments, resources and more. Its building blocks are blueprints and relations, and you can use them to build a catalog that reflects your exact data model. You can also build the catalog with one of Port's common data models.
 
-## Step 1 - Define your data model 📋
+## 📋 Step 1 - Define your data model
 
 This step begins with determining the information you would like to include for your main entity (most people begin with service), and defining the associated blueprint (in this case, a service blueprint).
 
-The next steps would be defining additional blueprints, such as environment or cluster, the data it should include and its relation to other entities.
+The next steps would be defining additional blueprints, such as cloud resource or cluster, the data it should include and its relation to other entities.
 For instance, if you want to manage packages in your software catalog, you'll define a package blueprint.
 
 By defining the structure of your data model in this way, you can ensure that the software catalog accurately reflects your engineering organization and as a result will provide you with the centralized and opinionated software catalog you need.
 
-![Basic blueprints relation](../../../static/img/../../port-docs/static/img/software-catalog/blueprint/exampleBlueprintsAndRelationsLayout.png)
+![Basic blueprints relation](../../static/img/software-catalog/blueprint/exampleBlueprintsAndRelationsLayout.png)
 
 See how to --> [Define your data model](./define-your-data-model/define-your-data-model.md)
 
-## Step 2 - Sync data to catalog 🔄
+## 🔄 Step 2 - Sync data to catalog
 
 The next step in setting Port's Software Catalog is to sync data into the catalog. This involves using Port's integrations and APIs to import data into the catalog, so that blueprints will be populated with the relevant data.
 
@@ -29,4 +32,10 @@ By syncing data into the software catalog, you can ensure that you have a compre
 
 See how to --> [Sync data to the software catalog](./sync-data-to-catalog/sync-data-to-catalog.md)
 
-![integrations](../../../static/img/../../port-docs/static/img/software-catalog/integrations.png)
+<!-- ![integrations](../../static/img/software-catalog/integrations.png) -->
+
+<center>
+
+<Image img={Integrations} style={{ width: 700 }} />
+
+</center>
