Fix api reference emoji

--- a/docs/api-reference/api-reference.mdx
+++ b/docs/api-reference/api-reference.mdx
@@ -4,7 +4,7 @@ sidebar_position: 10
 
 import ApiDocMdx from "@theme/ApiDocMdx";
 
-# API Reference 🧪
+# 🧪 API Reference
 
 This page includes all of the API endpoints available in Port.
 
