Add configuration methods page

--- a/docs/build-your-software-catalog/sync-data-to-catalog/api/get-api-token.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/api/get-api-token.mdx
@@ -2,8 +2,10 @@
 sidebar_position: 1
 ---
 
-import Tabs from "@theme/Tabs"
-import TabItem from "@theme/TabItem"
+import FindCredentials from "./_template_docs/_find_credentials.mdx";
+
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
 
 # Get API Token
 
@@ -18,13 +20,7 @@ Getting an API token involves 2 steps:
 
 ## Find your Port credentials
 
-To find your Port API credentials go to [Port](https://app.getport.io), click on `Credentials` at the bottom left corner and you will be able to view and copy your `CLIENT_ID` and `CLIENT_SECRET`:
-
-<center>
-
-![Port Developer Portal Credentials Modal](../../../../static/img/software-catalog/credentials-modal.png)
-
-</center>
+<FindCredentials />
 
 ## Generate an API token
 
