Update define your data FInish rest CICD

--- a/docs/build-your-software-catalog/define-your-data-model/configuration-methods/configuration-methods.mdx
+++ b/docs/build-your-software-catalog/define-your-data-model/configuration-methods/configuration-methods.mdx
@@ -9,13 +9,13 @@ import TabItem from "@theme/TabItem";
 
 # 🔧 Configuration Methods
 
-In order to configure blueprints and begin defining your data model, it is possible to use:
+In order to configure blueprints and begin defining your data model, you can use:
 
 - Port's API;
 - Port's Terraform provider;
 - Port's web UI.
 
-See the section below to understand how to use the different providers to define your blueprints:
+See the section below to understand how to use the different methods to define your blueprints:
 
 :::tip prerequisites
 
@@ -32,7 +32,7 @@ To use Port's API and Terraform provider, you will need API credentials.
 
 <TabItem value="api">
 
-Port's API provides a convenient REST interface to perform CRUD operations with blueprints.
+Port's [API](../../../api-reference/api-reference.mdx) provides a convenient REST interface to perform CRUD operations with blueprints.
 
 Port's API base URL is: `https://api.getport.io/v1`
 
@@ -59,6 +59,8 @@ For example to create a basic plain blueprint, send an HTTP POST request with fo
 ```
 
 To learn more about the JSON structure of a blueprint, refer to the [blueprint structure](../setup-blueprint/setup-blueprint.md#blueprint-structure) section.
+
+To learn more about Port's REST API, check out the [API reference](../../../api-reference/api-reference.mdx)
 
 </TabItem>
 
