Fix more docs comments

--- a/docs/build-your-software-catalog/define-your-data-model/configuration-methods/configuration-methods.mdx
+++ b/docs/build-your-software-catalog/define-your-data-model/configuration-methods/configuration-methods.mdx
@@ -9,13 +9,13 @@ import TabItem from "@theme/TabItem";
 
 # 🔧 Configuration Methods
 
-In order to configure blueprints and begin defining your data model, you can use:
+In order to configure blueprints and relations and begin defining your data model, you can use:
 
 - Port's API;
 - Port's Terraform provider;
 - Port's web UI.
 
-See the section below to understand how to use the different methods to define your blueprints:
+See the section below to understand how to use the different methods to define your blueprints and relations:
 
 :::tip prerequisites
 
