--- a/docs/build-your-software-catalog/sync-data-to-catalog/api/_template_docs/_find_credentials.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/api/_template_docs/_find_credentials.mdx
@@ -1,7 +1,10 @@
+import Image from "@theme/IdealImage";
+import Credentials from "../../../../../static/img/software-catalog/credentials-modal.png";
+
 To find your Port API credentials go to [Port](https://app.getport.io), click on the `Credentials` button at the bottom left corner and you will be able to view and copy your `CLIENT_ID` and `CLIENT_SECRET`:
 
 <center>
 
-![Port Developer Portal Credentials Modal](../../../../../static/img/software-catalog/credentials-modal.png)
+<Image img={Credentials} style={{ width: 500 }} />
 
 </center>
