Add teams example in github action

--- a/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/github-workflow/examples.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/github-workflow/examples.mdx
@@ -80,6 +80,7 @@ Add the following snippet to your GitHub workflow `yml` file:
     title: Example Package
     icon: GithubActions
     blueprint: package
+    team: "['myTeam']"
     properties: |
       {
         "version": "v1",
