Finish base terraform page and first example

--- a/docs/build-your-software-catalog/sync-data-to-catalog/iac/terraform/_terraform_provider_base.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/iac/terraform/_terraform_provider_base.mdx
@@ -2,7 +2,7 @@
 To install and use Port's Terraform provider, you will need to install the [Terraform CLI](https://learn.hashicorp.com/tutorials/terraform/install-cli)
 :::
 
-To install the Terraform provider, create a `.tf` file specifying the provider and the required Port [credentials](../api/api.md#find-your-port-credentials):
+To install the Terraform provider, create a `.tf` file specifying the provider and the required Port [credentials](../../api/api.md#find-your-port-credentials):
 
 ```hcl showLineNumbers
 terraform {
@@ -15,8 +15,8 @@ terraform {
 }
 
 provider "port-labs" {
-  client_id = "{YOUR CLIENT ID}"     # or set the env var PORT_CLIENT_ID
-  secret    = "{YOUR CLIENT SECRET}" # or set the env var PORT_CLIENT_SECRET
+  client_id = "{YOUR CLIENT ID}"     # or set the environment variable PORT_CLIENT_ID
+  secret    = "{YOUR CLIENT SECRET}" # or set the environment variable PORT_CLIENT_SECRET
 }
 ```
 
