fixed circleci comments

--- a/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/_ci_example_package_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/_ci_example_package_blueprint.mdx
@@ -1,5 +1,5 @@
 <details>
-<summary> Package blueprint (including the `microserviceBuild` relation) </summary>
+<summary> Package blueprint (including the microserviceBuild relation) </summary>
 
 ```json showLineNumbers
 {
