Integrate complete use cases organically, update footer

--- a/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/github-workflow/examples.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/github-workflow/examples.mdx
@@ -1,3 +1,7 @@
+---
+sidebar_position: 1
+---
+
 import ExampleMSBuildBlueprint from "../_ci_example_microservice_build_blueprint.mdx";
 import ExamplePackageBlueprint from "../_ci_example_package_blueprint.mdx";
 
