Finished git examples

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_supported_resources.mdx
@@ -1,9 +1,9 @@
 :::tip Available GitHub resources
 
-- [`repository`](https://docs.github.com/en/rest/repos/repos?apiVersion=2022-11-28#get-a-repository)
-- [`pull-request`](https://docs.github.com/en/rest/pulls/pulls?apiVersion=2022-11-28#get-a-pull-request)
-- [`workflow`](https://docs.github.com/en/rest/actions/workflows?apiVersion=2022-11-28#get-a-workflow)
-- [`workflow-run`](https://docs.github.com/en/rest/actions/workflow-runs?apiVersion=2022-11-28#get-a-workflow-run)
-- [`issue`](https://docs.github.com/en/rest/issues/issues?apiVersion=2022-11-28#get-an-issue)
+- [`repository`](https://docs.github.com/en/rest/repos/repos#get-a-repository)
+- [`pull-request`](https://docs.github.com/en/rest/pulls/pulls#get-a-pull-request)
+- [`workflow`](https://docs.github.com/en/rest/actions/workflows#get-a-workflow)
+- [`workflow-run`](https://docs.github.com/en/rest/actions/workflow-runs#get-a-workflow-run)
+- [`issue`](https://docs.github.com/en/rest/issues/issues#get-an-issue)
 
 :::
