--- a/docs/build-your-software-catalog/sync-data-to-catalog/api/_template_docs/_find_credentials_collapsed.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/api/_template_docs/_find_credentials_collapsed.mdx
@@ -4,7 +4,7 @@ import Credentials from "../../../../../static/img/software-catalog/credentials-
 <details>
 <summary>Find your Port credentials</summary>
 
-To find your Port API credentials go to [Port](https://app.getport.io), click on the `Credentials` button at the bottom left corner and you will be able to view and copy your `CLIENT_ID` and `CLIENT_SECRET`:
+To find your Port API credentials go to [Port](https://app.getport.io), click on `Help` at the bottom left corner, and select `Credentials` then you will be able to view and copy your `CLIENT_ID` and `CLIENT_SECRET`:
 
 <center>
 
