Fix credentials modals

--- a/docs/build-your-software-catalog/sync-data-to-catalog/api/_template_docs/_find_credentials_collapsed.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/api/_template_docs/_find_credentials_collapsed.mdx
@@ -1,15 +1,8 @@
-import Image from "@theme/IdealImage";
-import Credentials from "../../../../../static/img/software-catalog/credentials-modal.png";
+import CredentialsContent from "./_find_credentials.mdx";
 
 <details>
 <summary>Find your Port credentials</summary>
 
-To find your Port API credentials go to [Port](https://app.getport.io), click on `Help` at the bottom left corner, and select `Credentials` then you will be able to view and copy your `CLIENT_ID` and `CLIENT_SECRET`:
-
-<center>
-
-<Image img={Credentials} style={{ width: 500 }} />
-
-</center>
+<CredentialsContent />
 
 </details>
