Small update to example

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sonarqube/_example_sonarcloud_analysis_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sonarqube/_example_sonarcloud_analysis_blueprint.mdx
@@ -24,6 +24,10 @@
         "type": "string",
         "title": "Branch Name"
       },
+      "branchType": {
+        "type": "string",
+        "title": "Branch Type"
+      },
       "branchUrl": {
         "type": "string",
         "format": "url",
