--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sonarqube/_example_sonarcloud_analysis_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sonarqube/_example_sonarcloud_analysis_configuration.mdx
@@ -16,6 +16,7 @@
           "projectName": ".body.project.name",
           "projectUrl": ".body.project.url",
           "branchName": ".body.branch.name",
+          "branchType": ".body.branch.type",
           "branchUrl": ".body.branch.url",
           "qualityGateName": ".body.qualityGate.name",
           "qualityGateStatus": ".body.qualityGate.status",
