changed example titles + fixup for github

--- a/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/_ci_example_ci_job_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/_ci_example_ci_job_blueprint.mdx
@@ -1,5 +1,5 @@
 <details>
-<summary> CI Job (including the image relation) </summary>
+<summary> CI Job blueprint (including the image relation) </summary>
 
 ```json showLineNumbers
 {
