--- a/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/codefresh-workflow-template/examples.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/ci-cd/codefresh-workflow-template/examples.mdx
@@ -116,6 +116,7 @@ spec:
                   "synkMediumVulnerabilities": "0",
                   "gitRepoUrl": "https://github.com/my-org/my-cool-repo",
                   "imageRegistry": "docker.io/cool-image",
+                  "size": "0.71",
                   "unitTestCoverage": "20",
                   "unitTestCoverage": "50",
                 }
