--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/github/_example_github_pr_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/github/_example_github_pr_configuration.mdx
@@ -22,7 +22,7 @@
   "security": {
     "secret": "WEBHOOK_SECRET",
     "signatureHeaderName": "X-Hub-Signature-256",
-    "signatureAlgorithem": "sha256",
+    "signatureAlgorithm": "sha256",
     "signaturePrefix": "sha256=",
     "requestIdentifierPath": ".headers.\"X-GitHub-Delivery\""
   }
