apply suggestions and comments from code review

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sentry/_example_sentry_comment_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sentry/_example_sentry_comment_webhook_configuration.mdx
@@ -1,12 +1,12 @@
 ```json showLineNumbers
 {
-  "identifier": "SentryMapper",
+  "identifier": "sentryMapper",
   "title": "Sentry mapper",
   "description": "A webhook configuration to map Sentry Comments to Port",
-  "icon": "Deployment",
+  "icon": "Sentry",
   "mappings": [
     {
-      "blueprint": "SentryComments",
+      "blueprint": "sentryComments",
       "entity": {
         "identifier": ".body.data.comment_id",
         "title": "Comment Event",
