add relations to sentry comments and issues event

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sentry/_example_sentry_comment_webhook_configuration.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sentry/_example_sentry_comment_webhook_configuration.mdx
@@ -17,6 +17,9 @@
           "comment_id": ".body.data.comment_id",
           "issue_id": ".body.data.issue_id",
           "timestamp": ".body.data.timestamp"
+        },
+        "relations": {
+          "sentryIssuesEvent": ".body.data.issue_id | tostring"
         }
       }
     }
