--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sentry/_example_sentry_comments_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/sentry/_example_sentry_comments_blueprint.mdx
@@ -19,10 +19,6 @@
         "type": "string",
         "title": "Project Slug"
       },
-      "comment_id": {
-        "type": "string",
-        "title": "Comment ID"
-      },
       "issue_id": {
         "type": "string",
         "title": "Issue ID"
@@ -38,7 +34,7 @@
   "calculationProperties": {},
   "relations": {
     "sentryIssuesEvent": {
-      "title": "Used In",
+      "title": "Issue",
       "target": "sentryIssuesEvent",
       "required": false,
       "many": false
