modify webhook payload, add enum and colorization

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_build_blueprint.mdx
@@ -8,7 +8,13 @@
     "properties": {
       "buildStatus": {
         "type": "string",
-        "title": "Build status"
+        "title": "Build status",
+        "enum": ["SUCCESS", "FAILURE", "UNSTABLE"],
+        "enumColors": {
+          "SUCCESS": "green",
+          "FAILURE": "red",
+          "UNSTABLE": "yellow"
+        }
       },
       "buildUrl": {
         "type": "string",
