--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_job_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jenkins/_example_jenkins_job_blueprint.mdx
@@ -12,7 +12,8 @@
       },
       "jobStatus": {
         "type": "string",
-        "title": "Job status"
+        "title": "Job status",
+        "enum": ["QUEUED", "STARTED", "COMPLETED", "FINALIZED"]
       },
       "jobUrl": {
         "type": "string",
